--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                         <h2 class="brand">We'll reply so you don't have to!</h2>
                         <h3 class="brand">Text these numbers to discover a new friend.</h3>
                         <ul style="list-style: none;">
-                            <li><h1 class="brand">1 (877) 873-7591</h1></li>
-			    <li><h1 class="brand">1 (855) 976-9711</h1></li>
-                            <li><h1 class="brand">(443) 214-3199</h1></li>
+                            <li><h1 class="brand">443.602.8259</h1></li>
+                            <li><h1 class="brand">443.214.3199</h1></li>
                         </ul>
                     </div>
                 </div>
